fixed footer position on mobile, PPixel

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -11,6 +11,7 @@
 
   @media (max-width: $mobile-width-only) {
     min-height: 260px;
+    display: flex;
   }
 }
 
