--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -151,8 +151,8 @@
 
   @media (min-width: $desktop-width) {
     bottom: -91px;
-    margin-left: -30px;
-    max-width: 1297px;
+    margin-left: 56px;
+    max-width: 1126px;
   }
 
   @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
