--- a/source/sass/grid.scss
+++ b/source/sass/grid.scss
@@ -1,14 +1,9 @@
 .container {
   box-sizing: border-box;
-  padding-top: 0;
-  padding-right: 103px;
-  padding-left: 103px;
-  padding-bottom: 0;
+
+  padding: 0 103px;
   max-width: 1366px;
-  margin-top: 0;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 0;
+  margin: 0 auto;
 
   @media (max-width: $tablet-width-only) {
     padding: 0  45px;
